--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
-header  {
-    background-color: #c9c9c9;
+body  {
+    background-color: #FCF6BA;
+    min-height: 100vh;
 }
 
-main  {
-    background-color: #FCF6BA;
-    min-height: 100vp;
+header  {
+    background-color: #c9c9c9;
 }
 
 footer  {
