--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+/*Asterisk Element*/
+*  {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body  {
     color: #FCF6BA;
     min-height: 100vh;
