--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 /*Asterisk Element*/
-*  {
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
 body  {
-    color: #FCF6BA;
+    background-color: #FCF6BA;
     min-height: 100vh;
 }
 
