--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/*Imported Fonts*/
+<style>@import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&family=Taviraj:ital,wght@0,300;0,400;0,800;1,300;1,400;1,800&display=swap');
+</style>
 /*Asterisk Element*/
 * {
     padding: 0;
