test: applied Taviraj to footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /*Imported Fonts*/
-<style>@import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&family=Taviraj:ital,wght@0,300;0,400;0,800;1,300;1,400;1,800&display=swap');
-</style>
+@import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&family=Taviraj:ital,wght@0,300;0,400;0,800;1,300;1,400;1,800&display=swap');
+
+
 /*Asterisk Element*/
 * {
     padding: 0;
@@ -25,4 +26,5 @@ main  {
 
 footer  {
     background-color: #B38728;
+    font-family: 'Taviraj', sans-serif;
 }
