--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,8 @@ body  {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    /*General Font*/
+    font-family: 'Raleway', sans-serif;
 }
 
 header  {
