--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,11 @@ h1  {
     font-family: 'Taviraj', serif;
 }
 
+header a  {
+    text-decoration: none;
+    color: inherit;
+}
+
 main  {
     min-height: 100vh;
 }
