style: aligne header in center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,9 @@ body  {
 /*Header Element*/
 header  {
     background: url("../images/marble_background.jpg") no-repeat center center/cover;
+    padding: 0 1rem;
     position: fixed;
-    z-index: 99;
+    z-index: 98;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -30,21 +31,30 @@ header  {
 
 h1  {
     font-family: 'Taviraj', serif;
+    font-size: 32px;
 }
 
 header a  {
+    text-align: center;
     text-decoration: none;
     color: inherit;
 }
 
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+    list-style-type: none;
+}
 nav {
     position: absolute;
+    z-index: 99;
     background: url("../images/marble_background.jpg") no-repeat center center/cover;
     width: 100%;
     left: 0;
-    padding: 0 1rem
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
     display: none;
-
+    top: 100%;
 }
 
 /* nav toggle */
