--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ header  {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 
 h1  {
