fix: removed bullet points in nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,8 +45,8 @@ header a  {
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
-    list-style-type: none;
 }
+
 nav {
     position: absolute;
     z-index: 99;
@@ -57,6 +57,10 @@ nav {
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
     top: 100%;
+}
+
+ul  {
+    list-style-type: none;
 }
 
 /* nav toggle */
