--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body  {
 
 /*Header Element*/
 header  {
-    background-color: #B87328;
+    background-color: #3a3a3a;
     padding: 0 1rem;
     position: fixed;
     z-index: 98;
@@ -27,7 +27,6 @@ header  {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    box-shadow: 0 2px 2px #3a3a3a;
 }
 
 h1  {
