fix: changed footer color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,6 @@ main  {
 }
 /*Footer*/
 footer  {
-    background-color: #B38728;
+    background-color: #19282F;
     font-family: 'Taviraj', sans-serif;
 }
