--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,3 +101,8 @@ footer  {
     justify-content: space-evenly;
     list-style-type: none;
 }
+
+#social-media i  {
+    font-size: 200%;
+    padding: 5%
+}
