fix: inserted and adjusted hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,9 +84,9 @@ main  {
 }
 
 #landscape  {
-    height: 500px;
+    height: 640px;
     width: 100%;
-    background: url("../images/book_landscape.jpg") no-repeat center center/cover;
+    background: url("../images/torii_1920.jpg") no-repeat center center/cover;
 }
 /*Footer*/
 footer  {
