--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,35 @@ main  {
     height: 640px;
     width: 100%;
     background: url("../images/mountain_portable.png") no-repeat center center/cover;
+    
+}
+
+#test  {
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+#user_request  {
+    background-color: rgba(25, 40, 47, 0.6);
+    padding: 20px;    
+}
+
+.text-line  {
+    background: transparent;
+    border: 1px inset #FACF5A;
+    border-radius: 2px;
+    width: 100%;
+    padding: 0 5px;
+    margin: 5px 0 20px 0;
+}
+
+.form-button  {
+    margin-top: 30px;
+    border-radius: 2px;
+    padding: 15px 3px;
+    color: #FF5956;
+    background-color: #19282F;
 }
 
 /*Footer*/
