style: styled cover text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,12 +88,21 @@ nav {
 /*Main Content*/
 main  {
     min-height: 100vh;
+    margin-top: 40px;
 }
 
 #landscape  {
     height: 640px;
     width: 100%;
     background: url("../images/torii_1920.jpg") no-repeat center center/cover;
+}
+
+#cover-text  {
+    background-color: rgba(25, 40, 47, 0.6);
+    font-size: 125%;
+    position: absolute;
+    bottom: 35px;
+    text-align: right;
 }
 
 /* About Page */
