--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,3 +214,14 @@ footer  {
     display: none;
     }
 }
+
+/* Media Query for laptop or larger devices */
+
+@media screen and (min-width: 768px) {
+    #menu a:hover  {
+        color: #FF5956;
+    }
+
+    
+}
+
