fix: set rules to style content similar to services.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,8 +220,16 @@ footer  {
         flex-wrap: wrap;
     }
 
-    #m_techniques .quote-box, #m_techniques img {
+    #m_techniques img {
         width: 50vw;
+        border: 5px inset #FACF5A;
+        padding: 20px;
+        margin-top: 10px;
+    }
+
+    #m_techniques .m-explanation  {
+        width: 50vw;
+        padding: 10px 0 0 2vw;
     }
 
     div .m_summary  {
