--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,8 +101,9 @@ main  {
     background-color: rgba(25, 40, 47, 0.6);
     font-family: 'Taviraj',serif;
     font-size: 120%;
+    width: 100%;
     position: absolute;
-    bottom: 35px;
+    bottom: 5rem;
     text-align: center;
 }
 
