--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,7 +210,6 @@ footer  {
         padding-right: 10px;
     }
 
-
     #menu {
     display: flex;
     }
@@ -221,6 +220,14 @@ footer  {
 
     .nav-label  {
     display: none; /*Removal of Menu checkbox on larger screens*/
+    }
+
+    #cover-text h2 {
+    font-size: 300%;
+    }
+
+    #cover-text h4  {
+        font-size: 200%;
     }
     
     /* About Webpage */
