--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ main  {
 }
 
 #landscape  {
-    height: 640px;
+    height: 100vh;
     width: 100%;
     background: url("../images/torii_1920.jpg") no-repeat center center/cover;
 }
@@ -109,7 +109,7 @@ main  {
 
 /* About Page */
 #ronin {
-    height: 640px;
+    height: 100vh;
     width: 100%;
     background: url("../images/ronin_1920.jpg") no-repeat center center/cover;
 }
@@ -131,7 +131,7 @@ main  {
 
 /* Services Page */
 #fox  {
-    height: 640px;
+    height: 100vh;
     width: 100%;
     background: url("../images/fox_1920.jpg") no-repeat center center/cover;
 }
@@ -142,7 +142,7 @@ main  {
 
 /* Request (Build a Gate) Page */
 #mountain {
-    height: 653px;
+    height: 100vh;
     width: 100%;
     background: url("../images/mountain_portable.png") no-repeat center center/cover;
     margin-bottom: 125px;
