--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,8 +144,7 @@ main  {
 #mountain {
     height: 100vh;
     width: 100%;
-    background: url("../images/mountain_portable.png") no-repeat center center/cover;
-    margin-bottom: 125px;
+    background: url("../images/mountain_1920.jpg") no-repeat center center/cover;
     padding: 20px 10% 0 10%;
     flex: 1 0 auto;
 }
