fix: corrected spelling mistake

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ main  {
     background: url("../images/fox_1920.jpg") no-repeat center center/cover;
 }
 
-#cover-text-a {
+#cover-text-b {
     background-color: rgba(25, 40, 47, 0.6);
     font-family: 'Taviraj', serif;
     font-size: 140%;
