chore: copy pasted rules to services images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,8 +128,8 @@ main  {
 
 #m_techniques img {
     width: 90vw;
-    display: flex;
-    margin: 0 auto;
+    display: flex; /*Note: display:block should work here, but does not */
+    margin: 0 auto; 
     padding: 1rem;
     border: 1rem inset #FACF5A;
 }
@@ -153,7 +153,11 @@ main  {
 }
 
 #services img {
-    width: 100vw; /* id over class selector */
+    width: 90vw;
+    display: flex;/*Note: display:block should work here, but does not */
+    margin: 0 auto;
+    padding: 1rem;
+    border: 1rem inset #FACF5A;
 }
 
 /* Request (Build a Gate) Page */
