--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ nav {
 }
 
 #menu {
-    font-size: 110%;
+    font-size: 1.1rem;
     letter-spacing: 4px;
     list-style-type: none;
     text-align: center;
@@ -210,7 +210,7 @@ main  {
 #r_gratitude  {
     background-color: rgba(25, 40, 47, 0.6);
     font-family: 'Taviraj', serif;
-    font-size: 140%;
+    font-size: 1.4rem;
     width: 100%;
     position: absolute;
     top: 5rem;
@@ -220,7 +220,7 @@ main  {
 #r_gratitude_2 {
     background-color: rgba(25, 40, 47, 0.75);
     font-family: 'Taviraj', serif;
-    font-size: 100%;
+    font-size: 1rem;
     width: 100%;
     position: absolute;
     bottom: 5rem;
@@ -242,7 +242,7 @@ footer  {
 }
 
 #social-media i  {
-    font-size: 200%;
+    font-size: 2rem;
     padding: 5%
 }
 
@@ -269,16 +269,16 @@ footer  {
     }
 
     #cover-text h2 {
-    font-size: 300%;
+        font-size: 3rem;
     }
 
     #cover-text h4  {
-        font-size: 200%;
+        font-size: 2rem;
     }
     
     /* About Webpage */
     #cover-text-a{
-        font-size: 270%;
+        font-size: 2.7rem;
     }
 
     .m_summary {
@@ -303,7 +303,7 @@ footer  {
     }
     /* Services Webpage */
     #cover-text-b {
-        font-size: 270%;
+        font-size: 2.7rem;
     }
     
     #guidance, #creativity, #training  {
@@ -336,7 +336,5 @@ footer  {
     #menu a:hover  {
         color: #FF5956;
     }
-
-    /* main page */    
 }
 
