--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ main  {
 
 /* Request (Build a Gate) Page */
 #mountain {
-    height: 100vh;
+    height: 115vh; /*pushes the footer down to fit form */
     width: 100%;
     background: url("../images/mountain_1920.jpg") no-repeat center center/cover;
     padding: 20px 10% 0 10%;
