style: added padding and alignment to section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,18 @@ main  {
     text-align: center;
 }
 
+#statement  {
+    padding: 0.5rem 1rem;
+}
+
+#h-statement  {
+    text-align: center;
+}
+
+#h-statement p {
+    text-align: justify;
+}
+
 /* About Page */
 #ronin {
     height: 100vh;
