--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,14 @@ main  {
     text-align: justify;
 }
 
+#m-techniques h2,h3 {
+    text-align: center;
+}
+
+.m-summary p {
+    padding: 1rem 1rem;
+}
+
 #m-techniques img {
     width: 90vw;
     display: flex; /*Note: display:block should work here, but does not */
@@ -311,7 +319,7 @@ footer  {
         font-size: 2.7rem;
     }
 
-    .m_summary {
+    .m-summary {
         display: flex;
         flex-wrap: wrap;
     }
@@ -328,7 +336,7 @@ footer  {
         padding: 10px 0 0 2vw;
     }
 
-    div .m_summary  {
+    div .m-summary  {
         width: 100vw;
     }
     /* Services Webpage */
