fix: adjusted h size for mobile on index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,15 +114,21 @@ main  {
     text-align: center;
 }
 
+#cover-text h2  {
+    font-size: 1.3rem;
+}
+
 #statement  {
     padding: 0.5rem 1rem;
 }
 
 #h-statement  {
+    font-size: 1.3rem;
     text-align: center;
 }
 
 #statement p {
+    padding: 1rem;
     text-align: justify;
 }
 
@@ -437,5 +443,9 @@ footer  {
     #statement p {
         font-size: 1.4rem;
     }
+
+    /*About Page */
+
+    
 }
 
